objects/DQL_Team__c.object
<CustomObject>
    <fields>
        <fullName>Data_Qualified_Lead__c</fullName>
        <label>Data Qualified Lead</label>
        <referenceTo>Data_Qualified_Lead__c</referenceTo>
        <relationshipLabel>DQL Teams</relationshipLabel>
        <relationshipName>DQL_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Speculation</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DQL_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DQL Team</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>DQL Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DQL Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>